clusters/cl01tl/manifests/vaultwarden/HTTPRoute-vaultwarden.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vaultwarden
    helm.sh/chart: vaultwarden-5.2.1
  annotations:
    gethomepage.dev/description: Vaultwarden
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Background
    gethomepage.dev/icon: sh-vaultwarden-light.webp
    gethomepage.dev/name: Passwords
    gethomepage.dev/siteMonitor: https://passwords.alexlebens.dev
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "370"
  namespace: vaultwarden
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "passwords.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vaultwarden
          namespace: vaultwarden
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
